# llm-analytics-hub

./: .gitignore  Cargo.toml  IMPLEMENTATION_COMPLETE.md  PHASE_2B_COMPLIANCE_SUMMARY.md  PHASE_2_IMPLEMENTATION.md  PHASE_6_IMPLEMENTATION.md  README.md  RUST_IMPLEMENTATION_SUMMARY.md  TESTING.md  TESTING_IMPLEMENTATION.md  integration-manifest.json  package-lock.json
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
.github/workflows/: rust-tests.yml
api/: .npmignore  package-lock.json  package.json
api/src/: cache.ts  database.ts  index.ts
api/src/auth/: api-keys.ts  audit.ts  jwt.ts  mfa.ts  middleware.ts  oauth.ts
api/src/compliance/: gdpr.ts
api/src/routes/: analytics.ts  events.ts  metrics.ts
api/src/secrets/: vault.ts
api/src/types/: fastify.d.ts
benches/: infrastructure_benchmarks.rs
docs/: ARCHITECTURE_DIAGRAMS.md  DATA_MODELS_DOCUMENTATION.md  DATA_MODEL_OVERVIEW.md  DELIVERABLES_SUMMARY.md  DEPLOYMENT_STRATEGIES.md  DOCUMENTATION_INDEX.md  FILES_MANIFEST.md  IMPLEMENTATION_COMPLETE.md  INTEGRATION_DEPLOYMENT_SUMMARY.md  INTEGRATION_PATTERNS.md  PHASE_3_IMPLEMENTATION.md  PHASE_4_IMPLEMENTATION.md  PHASE_5_IMPLEMENTATION.md  PROJECT_SUMMARY.md  PYTHON_TO_RUST_BENCHMARKS.md  QUICKSTART.md  README.md  README_SHELL_CONVERSION.md  ROADMAP.md  ROADMAP_SUMMARY.md  SCHEMA_REFERENCE.md  SHELL_TO_RUST_CONVERSION_PLAN.md  SWARM_ANALYSIS_SUMMARY.md
frontend/: .npmignore  package-lock.json  package.json
frontend/src/: vite-env.d.ts
frontend/src/components/charts/: AreaLineChart.tsx  BarChart.tsx  BoxPlot.tsx  BubbleChart.tsx  BulletChart.tsx  CalendarHeatmap.tsx  CandlestickChart.tsx  ChartRegistry.tsx  ChordDiagram.tsx  ChoroplethMap.tsx  ComparisonCard.tsx  DataTable.tsx  DonutChart.tsx  DotMap.tsx  ForceDirectedGraph.tsx  FunnelChart.tsx  GaugeChart.tsx  GroupedBarChart.tsx  Heatmap.tsx  HistogramChart.tsx  HorizontalBarChart.tsx  MiniChart.tsx  MultiLineChart.tsx  PieChart.tsx  PivotTable.tsx  PolarChart.tsx  ProgressBar.tsx  RadarChart.tsx  SankeyDiagram.tsx  ScatterChart.tsx  SemiDonutChart.tsx  SingleValue.tsx  SingleValueTrend.tsx  SmoothLineChart.tsx  SparkLine.tsx  StackedBarChart.tsx  StackedLineChart.tsx  StatusIndicator.tsx  SteppedLineChart.tsx  SunburstChart.tsx  (+5 more)
frontend/src/components/dashboards/: ChartSelector.tsx  DashboardBuilder.tsx  DashboardList.tsx  DashboardView.tsx  WidgetConfigPanel.tsx
frontend/src/components/dashboards/templates/: ExecutiveDashboard.ts
frontend/src/components/layout/: MainLayout.tsx
plans/: LLM-Analytics-Hub-Plan.md  LLM-Analytics-Hub-SPARC-Complete.md
scripts/: verify-rust-implementation.sh
src/: lib.rs
src/analytics/: aggregation.rs  aggregation_engine.rs  correlation.rs  correlation_engine.rs  mod.rs
src/cli/: mod.rs
src/cli/database/: backup.rs  init.rs  mod.rs  restore.rs
src/cli/deploy/: aws.rs  azure.rs  gcp.rs  k8s.rs  mod.rs
src/cli/health/: all.rs  mod.rs
src/cli/kafka/: acls.rs  mod.rs  topics.rs  verify.rs
src/cli/redis/: init.rs  mod.rs  verify.rs
src/cli/utils/: cleanup.rs  connect.rs  mod.rs  scale.rs
src/cli/validate/: all.rs  cluster.rs  databases.rs  mod.rs  security.rs  services.rs
src/common/: config.rs  executor.rs  mod.rs  output.rs  progress.rs
src/database/: mod.rs  queries.rs  schema.rs
src/examples/: event_examples.rs  metrics_examples.rs
src/infra/: mod.rs
src/infra/backup/: mod.rs  s3.rs  timescaledb.rs  types.rs  verification.rs
src/infra/cloud/: aws.rs  azure.rs  gcp.rs  mod.rs
src/infra/k8s/: client.rs  deployment.rs  health.rs  mod.rs  resources.rs
src/infra/kafka/: acls.rs  mod.rs  topics.rs  types.rs  verification.rs
src/infra/redis/: cluster.rs  mod.rs  types.rs
src/infra/terraform/: executor.rs  mod.rs
src/infra/validation/: cluster.rs  databases.rs  mod.rs  network.rs  prerequisites.rs  resources.rs  security.rs  services.rs  types.rs
src/models/: api.rs  correlation.rs  metrics.rs  timeseries.rs
src/pipeline/: cache.rs  ingestion.rs  mod.rs  processing.rs  storage.rs  stream.rs
src/schemas/: events.rs  metadata.rs
tests/: backup_restore_tests.rs  k8s_operations_tests.rs  kafka_redis_tests.rs  property_tests.rs  validation_tests.rs
