[package]
name = "llm-analytics-hub"
version = "0.1.0"
edition = "2021"
authors = ["LLM Analytics Team"]
description = "Enterprise-grade analytics hub for LLM ecosystem monitoring with Kafka, TimescaleDB, Redis, and Kubernetes orchestration"
license = "Apache-2.0"
repository = "https://github.com/globalbusinessadvisors/llm-analytics-hub"
homepage = "https://github.com/globalbusinessadvisors/llm-analytics-hub"
documentation = "https://docs.rs/llm-analytics-hub"
readme = "README.md"
keywords = ["llm", "analytics", "kafka", "timescaledb", "kubernetes"]
categories = ["database", "development-tools", "web-programming"]
rust-version = "1.70"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
thiserror = "1.0"
async-trait = "0.1"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Database - TimescaleDB (PostgreSQL)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }

# Redis - Caching layer
redis = { version = "0.24", features = ["tokio-comp", "cluster-async", "connection-manager"] }

# Kafka - Event streaming
rdkafka = { version = "0.35", features = ["cmake-build", "ssl", "libz", "zstd"] }

# Time-series and metrics
influxdb = { version = "0.7", optional = true }

# HTTP client/server
axum = "0.7"
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["trace", "cors", "compression-full"] }
hyper = "1.0"

# Serialization
bincode = "1.3"
rmp-serde = "1.1" # MessagePack

# Statistics and math
statrs = "0.16"
ndarray = "0.15"

# Machine Learning / Predictive Analytics
linfa = { version = "0.7", optional = true }
linfa-clustering = { version = "0.7", optional = true }

# Configuration
config = "0.14"
dotenv = "0.15"

# Metrics and observability
prometheus = "0.13"
opentelemetry = { version = "0.21", optional = true }
opentelemetry-prometheus = { version = "0.14", optional = true }

# Circuit breaker and resilience
failsafe = "1.2"

# Concurrency and synchronization
dashmap = "5.5"
parking_lot = "0.12"

# Utilities
futures = "0.3"
bytes = "1.5"
regex = "1.10"
dirs = "5.0"

# CLI tools
clap = { version = "4.4", features = ["derive", "env", "string"] }
colored = "2.1"
reqwest = { version = "0.11", features = ["json"] }
indicatif = "0.17"
console = "0.15"
dialoguer = "0.11"
comfy-table = "7.1"

# Kubernetes
kube = { version = "0.87", features = ["runtime", "client", "derive"] }
k8s-openapi = { version = "0.20", features = ["v1_28"] }

# YAML support
serde_yaml = "0.9"

# Cloud provider SDKs - S3 and config required for backup module
aws-config = "1.0"
aws-sdk-s3 = "1.0"

# Optional cloud SDKs for deployment features
aws-sdk-eks = { version = "1.0", optional = true }
aws-sdk-rds = { version = "1.0", optional = true }
aws-sdk-elasticache = { version = "1.0", optional = true }
aws-sdk-kafka = { version = "1.0", optional = true }
aws-sdk-ec2 = { version = "1.0", optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-test = "0.4"
proptest = "1.4"
quickcheck = "1.0"
quickcheck_macros = "1.0"
fake = { version = "2.9", features = ["derive", "chrono", "uuid"] }
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
mockall = "0.12"
rstest = "0.18"
serial_test = "3.0"
wiremock = "0.6"
tempfile = "3.8"
insta = "1.34"
pretty_assertions = "1.4"
test-case = "3.3"

[features]
default = ["full"]
full = ["ml", "telemetry"]
ml = ["linfa", "linfa-clustering"]
telemetry = ["opentelemetry", "opentelemetry-prometheus"]
timeseries = ["influxdb"]
aws = ["aws-sdk-eks", "aws-sdk-rds", "aws-sdk-elasticache", "aws-sdk-kafka", "aws-sdk-ec2"]
cloud = ["aws"]

[[example]]
name = "event_examples"
path = "src/examples/event_examples.rs"

[[example]]
name = "metrics_examples"
path = "src/examples/metrics_examples.rs"

[lib]
name = "llm_analytics_hub"
path = "src/lib.rs"

[[bin]]
name = "bench-timescaledb"
path = "src/bin/bench-timescaledb.rs"

[[bin]]
name = "bench-redis"
path = "src/bin/bench-redis.rs"

[[bin]]
name = "kafka-admin"
path = "src/bin/kafka-admin.rs"

[[bin]]
name = "llm-analytics"
path = "src/bin/llm-analytics.rs"

[[bench]]
name = "event_processing"
harness = false

[[bench]]
name = "metric_aggregation"
harness = false

[[bench]]
name = "timeseries_query"
harness = false
